# self_calibration

./: .gitmodules  CMakeLists.txt
interface/: error_code.h
src/: CMakeLists.txt
src/Calibrate360/: CMakeLists.txt  Calibrate360.cpp  ReadMe.txt
src/Calibrate360/resources/: camera_rig.json
src/Stitch360/: CMakeLists.txt  Stitch360.cpp
src/Stitch360/resources/: camera_rig.json
src/libPanoStitch/: CMakeLists.txt  CalibraterBase.cpp  CalibraterBase.h  ICalibrate.h  IPanoStitch.h  PanoStitchBase.cpp  PanoStitchBase.h  V10Calibrater.cpp  V10Calibrater.h  V10PanoStitch.cpp  V10PanoStitch.h  libPanoStitch.cpp  libPanoStitch.h
src/libPanoStitch/calibration/: GeometricCalibration.cpp  GeometricCalibration.h
src/libPanoStitch/render/: RigDescription.cpp
src/util/: CMakeLists.txt
